--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -1,5 +1,5 @@
 $form-wrapper-margin: 0.375rem 5.595rem 0.125rem 5.595rem;
-$form-wrapper-padding: 2rem 9.188rem 1.625rem 0;
+$form-wrapper-padding: 2rem 0.095rem 1.625rem 0;
 
 .form-wrapper {
   margin: $form-wrapper-margin;
@@ -25,7 +25,6 @@ $form-wrapper-padding: 2rem 9.188rem 1.625rem 0;
     align-items: center;
     justify-content: space-between;
     margin-top: 1rem;
-    width: 113.5%;
 
     .input-book {
       width: 60%;
